# openscad_evaluator

./: CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: pytest.yml
docs/: evaluator.md
examples/: manifold_cache_reuse.py  minimal_debugger.py
src/openscad_evaluator/: __init__.py  _css_colors.py  _debug_repl.py  cli.py  evaluator.py  export.py
tests/: test_cli.py  test_evaluator.py  test_examples.py  test_export.py
